; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/cavium/zip/extr_zip_crypto.c_zip_free_scomp_ctx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/cavium/zip/extr_zip_crypto.c_zip_free_scomp_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_scomp = type { i32 }
%struct.zip_kernel_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zip_free_scomp_ctx(%struct.crypto_scomp* %0, i8* %1) #0 {
  %3 = alloca %struct.crypto_scomp*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.zip_kernel_ctx*, align 8
  store %struct.crypto_scomp* %0, %struct.crypto_scomp** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.zip_kernel_ctx*
  store %struct.zip_kernel_ctx* %7, %struct.zip_kernel_ctx** %5, align 8
  %8 = load %struct.zip_kernel_ctx*, %struct.zip_kernel_ctx** %5, align 8
  %9 = call i32 @zip_ctx_exit(%struct.zip_kernel_ctx* %8)
  %10 = load %struct.zip_kernel_ctx*, %struct.zip_kernel_ctx** %5, align 8
  %11 = call i32 @kzfree(%struct.zip_kernel_ctx* %10)
  ret void
}

declare dso_local i32 @zip_ctx_exit(%struct.zip_kernel_ctx*) #1

declare dso_local i32 @kzfree(%struct.zip_kernel_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
